--- a/Server/FrontEnd/index.html
+++ b/Server/FrontEnd/index.html
@@ -1,8 +1,63 @@
+<!DOCTYPE html>
+<html ng-app="tripApp">
+<head>
+ <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="TripAround">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>TripAround</title></head>
+<!-- Vendor - Bootstrap stylesheet go here -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" >
+<link rel="stylesheet" href="/FrontEnd/css/main.css">
+<link href="https://fonts.googleapis.com/css?family=Lemonada|Shadows+Into+Light+Two" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Merienda+One|Pacifico" rel="stylesheet">
+
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="/FrontEnd/js/socket.io.js"></script>
+<!-- Vendor: Angular, followed by our custom Javascripts >
+//<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.js"></script>
+<script src="http://popcornjs.org/code/dist/popcorn-complete.js"></script> -->
+
+<script src="/FrontEnd/js/react.js"></script>
+<script src="/FrontEnd/js/react-dom-server.min.jseact-dom-server.min.js"></script>
+<script src="/FrontEnd/js/react-dom.min.js"></script>
+
+
+<!-- Our Website Javascripts -->
+<script src="/FrontEnd/js/main.js"></script>
+<body>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        Trip Around
+      </a>
+    </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li> <a href="#"><i class="fa fa-home fa-2x" style="font-size: 22px"></i> Home</a></li>
+        <li> <a href="#about"><i class="fa fa-shield fa-2x" style="font-size: 22px"></i> About Us</a></li>
+        <li> <a href="#contact"><i class="fa fa-shield fa-2x" style="font-size: 22px"></i>Contact</a></li>
+        <li> <a href="#Services"><i class="fa fa-shield fa-2x" style="font-size: 22px"></i>Services</a></li>
+      </ul>
+  </div>
+</nav>
+
+<p>
 <form id        =  "uploadForm"
      enctype   =  "multipart/form-data"
      action    =  "/api/photo"
      method    =  "post"
 >
-<input type="file" name="userPhoto" />
-<input type="submit" value="Upload Image" name="submit">
+<div id=""></div>
+
+<input type="file" name="userPhoto" /><input type="submit" value="Upload Image" name="submit">
 </form>
+</p>
+</body>
+</html>
