Adding scribble Map API

--- a/Server/FrontEnd/index.html
+++ b/Server/FrontEnd/index.html
@@ -10,7 +10,7 @@
 <!-- Vendor - Bootstrap stylesheet go here -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" >
-<link rel="stylesheet" href="/FrontEnd/css/dropzone.css";
+<link rel="stylesheet" href="/FrontEnd/css/dropzone.css"
 <link href="https://fonts.googleapis.com/css?family=Lemonada|Shadows+Into+Light+Two" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Merienda+One|Pacifico" rel="stylesheet">
 <link rel="stylesheet" href="/FrontEnd/css/main.css">
@@ -58,12 +58,6 @@
 
 
 
-<p>
-  This is the most minimal example of Dropzone. The upload in this example
-  doesn't work, because there is no actual server to handle the file upload.
-</p>
-
-
 <form id        =  "uploadForm"
      enctype   =  "multipart/form-data"
      action    =  "/api/photo"
@@ -74,6 +68,10 @@
 <!--
 <input type="file" name="userPhoto" />--> <input type="submit" value="Upload Image" name="submit">
 </form>
+</p>
+
+<p>
+  <div id="ScribbleMap" style="width: 500px; height: 500px"></div>
 </p>
 </body>
 </html>
