--- a/Server/FrontEnd/index.html
+++ b/Server/FrontEnd/index.html
@@ -10,7 +10,7 @@
 <!-- Vendor - Bootstrap stylesheet go here -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" >
-<link rel="stylesheet" href="/FrontEnd/css/dropzone.css"
+<link rel="stylesheet" href="/FrontEnd/css/dropzone.css"/>
 <link href="https://fonts.googleapis.com/css?family=Lemonada|Shadows+Into+Light+Two" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Merienda+One|Pacifico" rel="stylesheet">
 <link rel="stylesheet" href="/FrontEnd/css/main.css">
@@ -64,9 +64,8 @@
      method    =  "post"
      class="dropzone"
 >
-<div id=""></div>
-<!--
-<input type="file" name="userPhoto" />--> <input type="submit" value="Upload Image" name="submit">
+
+<input type="file" name="userphoto" /><input type="submit" value="Upload Image" name="submit">
 </form>
 </p>
 
