--- a/public/FrontEnd/index.html
+++ b/public/FrontEnd/index.html
@@ -19,7 +19,7 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script src="/FrontEnd/js/socket.io.js"></script>
+
 <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
 <!-- Vendor: Angular, followed by our custom Javascripts >
 //<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular.js"></script>
@@ -75,11 +75,12 @@
 </form>
 <!--finish of uploading forms-->
 
-<form id        =  "uploadForm"
+<form id        =  "dragdrop"
      enctype   =  "multipart/form-data"
      action    =  "/api/photo"
      method    =  "post"
      class="dropzone"
+      name="dragdrop"
 >
 
 <input type="file" name="userphoto" /><input type="submit" value="Upload Image" name="submit">
