--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
 
 <form id        =  "uploadForm"
      enctype   =  "multipart/form-data"
-     action    =  "/api/photo"
+     action    =  "/photos"
      method    =  "post"
      class="dropzone"
 >
