--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
       <input type='text' id='random' name='random'><br>
       <span id = "status"></span>
     </form>
-    
+    <script src="uploadImage.js"></script>
 <!--finish of uploading forms-->
 
 <form id        =  "uploadForm"
