--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
 <script src="/FrontEnd/js/react-dom.min.js"></script>
 <sript src="/FrontEnd/js/dropzone.js"></sript>
 
-<!--Map API frame work --->
+<!--Map API frame work-->
 <script type="text/javascript" src="//scribblemaps.com/api/js/"></script>
 
-<!-- Our Website Javascripts -->
+<!--Our Website Javascripts -->
 <script src="/FrontEnd/js/main.js"></script>
 <body>
 
