--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,8 @@
     <br />
     <br />
     <br />
-<h1>Multiple File Upload With ExpressJS, Multer and NodeJs</h1><br />
+    <h1>Multiple File Upload With ExpressJS, Multer and NodeJs</h1><br />
+    <h3>Saving into FileSystem and the path in MongoDB</h3><br />
 <form id="uploadForm2"
       enctype="multipart/form-data"
       action="/api/photo"
