Added static paths for css js files. Fixed uploadImage.js

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX3rpSwtuzsvOykF3C25s-rT0a2AqugfU"></script>
 <!--<script src="http://maps.googleapis.com/maps/api/js"></script>-->
-<!--Our Main ja file -->
+<!--Our Main javascript  file -->
 
 <script src="/FrontEnd/js/main.js"></script>
 <body>
