Added socket-io. Please do npm install -save socket.io next time on node launch.
Added socket-io to dependencies list in package.jason.

--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,17 @@
 <link rel="stylesheet" href="/FrontEnd/css/main.css">
 <link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css">
 
+<!--Vendor Libraries -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
+
 
 <!-- Vendor: Angular, followed by our custom Javascripts >
 //<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.js"></script>
 <script src="http://popcornjs.org/code/dist/popcorn-complete.js"></script> -->
-
+<script src="/FrontEnd/js/socket.io.js"></script>
 <script src="/FrontEnd/js/react.js"></script>
 <script src="/FrontEnd/js/react-dom-server.min.js"></script>
 <script src="/FrontEnd/js/react-dom.min.js"></script>
