Server quits gracefully

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,8 @@
 
 <!--finish of uploading forms-->
 
+<!--Start of Drag and drop form -->
+
 <form id        =  "uploadForm"
       enctype   =  "multipart/form-data"
       action    =  "/photos"
@@ -89,7 +91,7 @@
       class="dropzone"
 >
 
-    <input type="file" name="userphoto" id="userphotoid"> Click here </input> <input type="submit" value="Upload Image" name="submit">
+<input type="file" name="userphoto" id="userphotoid"> Click here </input> <input type="submit" value="Upload Image" name="submit">
 </form>
 
 
