--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/html">
+<html ng-app="tripapp" xmlns="http://www.w3.org/1999/html">
 <head>
  <meta charset="UTF-8">
     <meta charset="utf-8">
@@ -16,87 +16,69 @@
 <link rel="stylesheet" href="/FrontEnd/css/main.css">
 <link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css">
 
-<!--Vendor Libraries -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
+<body class="container fluid" id="maincontainerpanel">
 
 
-<!-- Vendor: Angular, followed by our custom Javascripts > -->
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.js"></script>
-<script src="/FrontEnd/js/socket.io.js"></script>
-<!--
-<script src="/FrontEnd/js/react.js"></script>
-<script src="/FrontEnd/js/react-dom-server.min.js"></script>
-<script src="/FrontEnd/js/react-dom.min.js"></script> -->
-<sript src="/FrontEnd/js/dropzone.js"></sript>
-<script src="/FrontEnd/js/exif.js"></script>
-<script src="/FrontEnd/js/binaryajax.js"></script>
-<script src="/FrontEnd/js/uploadImage.js"></script>
+    <!--The wrapper for side panel -->
+    <div id="wrapper">
+      <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+          <li class="sidebar-brand">
+            <a href="#">
+              Dashboard
+            </a>
+          </li>
+          <li>
+            <a href="#uploadphotos" data-ng-init="init()">
+              Upload Photos
+            </a>
+            </li>
+          <li>
+            <a href="#viewgallery">
+              View Gallery
+            </a>
+          </li>
+          <li>
+            <a href="#viewmaps">
+              View Maps
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div id="page-content-wrapper">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12">
+              <p> <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Full Screen</a> </p>
+                  <div ng-view> </div>
 
-<!--Map API frame work-->
-
-
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX3rpSwtuzsvOykF3C25s-rT0a2AqugfU"></script>
-<!--<script src="http://maps.googleapis.com/maps/api/js"></script>-->
-<!--Our Main javascript  file -->
-
-<script src="/FrontEnd/js/main.js"></script>
-
-<body>
-<div ng-app="tripapp">
-<nav class="navbar navbar-default navbar-fixed-top" ng-controller="maincontroller">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        Trip Around
-      </a>
-    </div>
-      <ul class="nav navbar-nav navbar-right">
-        <li> <a href="#"><i class="fa fa-home fa-2x" style="font-size: 22px"></i> Home</a></li>
-        <li> <a href="#product"><i class="fa fa-shield fa-2x" style="font-size: 22px"></i> About Us</a></li>
-        <li> <a href="#contact"><i class="fa fa-shield fa-2x" style="font-size: 22px"></i>Contact</a></li>
-        <li> <a href="#Services"><i class="fa fa-shield fa-2x" style="font-size: 22px"></i>Services</a></li>
-      </ul>
+             </div>
+            </div>
+          </div>
+        </div>
   </div>
-</nav>
 
-<p>
-<div id="main">
-  <div ng-view></div>
-</div>
-</div>
+<!---------------------------- Script loading section ------------------------------------------------>
+    <!--Vendor Libraries -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
+    <!-- Vendor JS: Angular JS, exif, dropzone, binaryajax -->
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.js"></script>
+    <script src="/FrontEnd/js/socket.io.js"></script>
+    <sript src="/FrontEnd/js/dropzone.js"></sript>
+    <script src="/FrontEnd/js/exif.js"></script>
+    <script src="/FrontEnd/js/binaryajax.js"></script>
+    <script src="/FrontEnd/js/uploadImage.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+    <!--Map API frame work-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX3rpSwtuzsvOykF3C25s-rT0a2AqugfU"></script>
 
-    <h1>Multiple File Upload With ExpressJS, Multer and NodeJs</h1><br />
-    <h3>Saving into FileSystem and the path in MongoDB</h3><br />
-<form id="uploadForm2"
-      enctype="multipart/form-data"
-      action="/api/photo"
-      method="post">
-    <input type="file" name="userPhoto" multiple />
-    <input type="submit" value="Upload Image" name="submit">
-    <span id = "status"></span>
-</form>
+    <!--Our Main javascript  file -->
+    <script src="/FrontEnd/js/main.js"></script>
+    <!---------------------------------------- Script loadind ends ---------------------------------------->
 
-
-<!--finish of uploading forms-->
-
-<!--Start of Drag and drop form -->
-
-<form id        =  "uploadForm"
-      enctype   =  "multipart/form-data"
-      action    =  "/photos"
-      method    =  "post"
-      class="dropzone">
-
-
-<input type="file" name="userphoto" id="userphotoid"> Click here </input> <input type="submit" value="Upload Image" name="submit">
-</form>
-
-
-<div id="googleMap" style="width:500px;height:380px;"></div>
 </body>
 
 </html>
