--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,9 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-12">
-                 <div ng-view> </div>
-                <p> <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Full Screen</a> </p>
+                <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"></a>
+                <div ng-view> </div>
+
                </div>
               </div>
             </div>
