--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
   <body class="container fluid" id="maincontainerpanel">
       <!--The wrapper for side panel -->
-      <div id="wrapper">
+      <div id="wrapper" class="toggled">
         <div id="sidebar-wrapper">
           <ul class="sidebar-nav">
             <li class="sidebar-brand">
@@ -44,8 +44,7 @@
             <div class="row">
               <div class="col-lg-12">
                 <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"></a>
-                <div ng-view> </div>
-
+                 <div ng-view> </div>
                </div>
               </div>
             </div>
