imagegallery database updates

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       <link href="https://fonts.googleapis.com/css?family=Merienda+One|Pacifico" rel="stylesheet">
       <link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css">
       <link rel="stylesheet" href="/FrontEnd/css/main.css">
+      <link rel="stylesheet" href="/FrontEnd/css/magnific-popup.css">
   </head>
 
   <body class="container fluid" id="maincontainerpanel">
@@ -35,6 +36,11 @@
             <li>
               <a href="#viewmaps">
                 View Maps
+              </a>
+            </li>
+            <li>
+              <a href="#imagegallery">
+                Browse Image Gallery
               </a>
             </li>
           </ul>
@@ -63,6 +69,7 @@
       <script src="/FrontEnd/js/socket.io.js"></script>
       <sript src="/FrontEnd/js/dropzone.js"></sript>
       <script src="/FrontEnd/js/exif.js"></script>
+      <script src="/FrontEnd/js/jquery.magnific-popup.min.js"></script>
       <script src="/FrontEnd/js/binaryajax.js"></script>
       <script src="/FrontEnd/js/uploadImage.js"></script>
 
