--- a/public/index.html
+++ b/public/index.html
@@ -62,17 +62,17 @@
       <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
       <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.js"></script>
       <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-      <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
+
       <!-- Vendor JS: Angular JS, exif, dropzone, binaryajax -->
       <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.js"></script>
       <script src="/FrontEnd/js/socket.io.js"></script>
-      <sript src="/FrontEnd/js/dropzone.js"></sript>
+      <script src="/FrontEnd/js/dropzone.js"></script>
       <script src="/FrontEnd/js/exif.js"></script>
       <script src="/FrontEnd/js/jquery.magnific-popup.min.js"></script>
       <script src="/FrontEnd/js/binaryajax.js"></script>
       <script src="/FrontEnd/js/uploadImage.js"></script>
-
+      <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
       <!--Map API frame work-->
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX3rpSwtuzsvOykF3C25s-rT0a2AqugfU"></script>
       <!--Our Main javascript  file -->
