Image gallery carousel

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,13 @@
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" >
       <link rel="stylesheet" href="/FrontEnd/css/dropzone.css"/>
+      <link rel="stylesheet" href="/FrontEnd/css/blueberry.css"/>
       <link href="https://fonts.googleapis.com/css?family=Lemonada|Shadows+Into+Light+Two" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Merienda+One|Pacifico" rel="stylesheet">
       <link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css">
       <link rel="stylesheet" href="/FrontEnd/css/main.css">
       <link rel="stylesheet" href="/FrontEnd/css/magnific-popup.css">
+      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
   </head>
 
   <body class="container fluid" id="maincontainerpanel">
@@ -70,6 +72,8 @@
       <script src="/FrontEnd/js/dropzone.js"></script>
       <script src="/FrontEnd/js/exif.js"></script>
       <script src="/FrontEnd/js/jquery.magnific-popup.min.js"></script>
+      <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+      <script src="/FrontEnd/js/jquery.blueberry.js"></script>
       <script src="/FrontEnd/js/binaryajax.js"></script>
       <script src="/FrontEnd/js/uploadImage.js"></script>
       <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
