User Map creation

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>TripAround</title>
     <!-- Vendor - Bootstrap stylesheet go here -->
+      <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" >
       <link rel="stylesheet" href="/FrontEnd/css/dropzone.css"/>
-      <link rel="stylesheet" href="/FrontEnd/css/blueberry.css"/>
       <link href="https://fonts.googleapis.com/css?family=Lemonada|Shadows+Into+Light+Two" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Merienda+One|Pacifico" rel="stylesheet">
       <link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css">
@@ -73,7 +73,7 @@
       <script src="/FrontEnd/js/exif.js"></script>
       <script src="/FrontEnd/js/jquery.magnific-popup.min.js"></script>
       <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-      <script src="/FrontEnd/js/jquery.blueberry.js"></script>
+
       <script src="/FrontEnd/js/binaryajax.js"></script>
       <script src="/FrontEnd/js/uploadImage.js"></script>
       <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
