add leaflet dependecy and update index.html

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
       <link rel="stylesheet" href="/FrontEnd/css/main.css">
       <link rel="stylesheet" href="/FrontEnd/css/magnific-popup.css">
       <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+	<!--Clustering markers-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.css" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.js"></script>
+	<!--end of clustering markers-->
   </head>
 
   <body class="container fluid" id="maincontainerpanel">
