adding a sample marker clustering

--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,8 @@
       <!--Our Main javascript  file -->
       <script src="/FrontEnd/js/main.js"></script>
       <!---------------------------------------- Script loadind ends ---------------------------------------->
+
+      <!---------------------------------------- Cluster Markers Starts ---------------------------------------->
 	<div id="map"></div>
 	<span>Mouse over a cluster to see the bounds of its children and click a cluster to zoom to those bounds</span>
 	<script type="text/javascript">
@@ -116,5 +118,7 @@
 		map.addLayer(markers);
 
 	</script>
+      <!---------------------------------------- Cluster Markers ends ---------------------------------------->
+
   </body>
 </html>
