--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   <body class="container fluid" id="maincontainerpanel">
       <!--The wrapper for side panel -->
       <div id="wrapper" class="toggled">
+        <!--
         <div id="sidebar-wrapper">
           <ul class="sidebar-nav">
             <li class="sidebar-brand">
@@ -46,12 +47,13 @@
               </a>
             </li>
           </ul>
-        </div>
+
+        </div>-->
         <div id="page-content-wrapper">
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-12">
-                <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"></a>
+                <!--<a href="#menu-toggle" class="btn btn-default" id="menu-toggle"></a> -->
                  <div ng-view> </div>
                </div>
               </div>
@@ -78,7 +80,8 @@
       <script src="/FrontEnd/js/uploadImage.js"></script>
       <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
       <!--Map API frame work-->
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX3rpSwtuzsvOykF3C25s-rT0a2AqugfU"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX3rpSwtuzsvOykF3C25s-rT0a2AqugfU&libraries=places"></script>
+
       <!--Our Main javascript  file -->
       <script src="/FrontEnd/js/main.js"></script>
       <!---------------------------------------- Script loadind ends ---------------------------------------->
