Changed dashboard look

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
   </head>
 
   <body id="maincontainerpanel">
-    <div ng-view></div>
+    <div class="container-fluid">
+      <div ng-view></div>
+    </div>
 
   <!---------------------------- Script loading section ------------------------------------------------>
     <!--Vendor Libraries -->
@@ -46,6 +48,8 @@
 
     <!--Our Main javascript  file -->
     <script src="/FrontEnd/js/main.js"></script>
+    
+    <script src="https://use.fontawesome.com/cf422f1f27.js"></script>
     <!---------------------------------------- Script loadind ends ---------------------------------------->
   </body>
 </html>
