--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body id="maincontainerpanel">
-    <div class="container-fluid">
+    <div class="container">
       <div ng-view></div>
     </div>
 
